--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <?php
 if (array_key_exists('HTTP_X_FORWARDED_FOR', $_SERVER) && !empty($_SERVER['HTTP_X_FORWARDED_FOR'])) {
     if (strpos($_SERVER['HTTP_X_FORWARDED_FOR'], ',') > 0) {
@@ -68,3 +69,4 @@ if (!empty($details)) {
     }
 }
 echo $message;
+</html>
